0026701: BOPAlgo_Builder::Perform crash. (data race)

Add comments and make minor cosmetic changes.

Test case for issue CR26701

Correction of test case for issue CR26701